--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -6,7 +6,9 @@ td.home, th.home {
 }
 td.score, th.score {
     text-align:center;
-    width:40px;
+    max-width:60px;
+    width:auto;
+    min-width:40px;
 }
 td.away, th.away {
     text-align:left;
