--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -24,6 +24,13 @@ a.btn{
 }
 
 
+.repick button.btn{
+    margin:0;
+    line-height:14px;
+    padding: 0px 4px;
+    font-size:11px;
+ }
+
 .repick.navbar-text {
     line-height:20px;
     padding-left: 5px;
