Add reveal button to hidden score (not hooked up to anything yet).

--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -34,6 +34,13 @@ button.select {
     font-size:11px;
  }
 
+.game td button.btn{
+    margin:0;
+    line-height:14px;
+    padding: 0px 4px;
+    font-size:11px;
+}
+
 .my-nav {
     padding-bottom: 5px;
 }
