--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -3,8 +3,10 @@ table.game{
 }
 td.home, th.home {
     text-align:right;
+    vertical-align:middle;
 }
 td.score, th.score {
+    vertical-align:middle;
     text-align:center;
     white-space:nowrap;
     max-width:60px;
@@ -12,6 +14,7 @@ td.score, th.score {
     min-width:40px;
 }
 td.away, th.away {
+    vertical-align:middle;
     text-align:left;
 }
 
