Fix reveal css interfering with team select button.

--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -37,7 +37,7 @@ button.select {
     font-size:11px;
  }
 
-.game td button.btn{
+.game td button.reveal{
     margin:0;
     line-height:14px;
     padding: 0px 4px;
