--- a/static/css/nmt.css
+++ b/static/css/nmt.css
@@ -32,17 +32,18 @@ button.select {
     width: 100%;
 }
 
-.repick button.btn{
+.repick button.btn,
+.game td button.reveal{
     margin:0;
     line-height:14px;
     padding: 0px 4px;
     font-size:11px;
  }
 
-.game td button.reveal{
+.btn-mini {
     margin:0;
     line-height:14px;
-    padding: 0px 4px;
+    padding: 4px 8px;
     font-size:11px;
 }
 
